--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "description": "",
     "dependencies": {
         "@prisma/client": "5.18.0",
+        "date-fns": "^4.1.0",
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "joi": "^17.13.3",
