--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "dotenv": "^16.5.0",
         "express": "^5.1.0",
         "joi": "^17.13.3",
-        "jsonwebtoken": "^9.0.2"
+        "jsonwebtoken": "^9.0.2",
+        "node-cron": "^4.2.1"
     },
     "devDependencies": {
         "@types/express": "^5.0.2",
