--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,26 @@
-name: Test SSH
+name: Deploy to EC2
 
 on:
-  workflow_dispatch:
   push:
-        branches:
-            - main
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-  test-ssh:
+  deploy:
     runs-on: ubuntu-latest
-    steps:
-      - name: Test SSH to EC2
-        uses: webfactory/ssh-agent@v0.9.0
-        with:
-          ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
-      - name: Check EC2
-        run: ssh -o StrictHostKeyChecking=no deploy@3.110.160.251 "echo 'SSH works!'"
 
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_PRIVATE_KEY }}
+          script: |
+            echo "🚀 Starting deployment on EC2..."
+            bash /home/deploy/deploy.sh
+            echo "✅ Deployment completed!"
