--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
-        "start": "ts-node src/index.ts"
+        "start": "ts-node src/index.ts",
+        "build": "tsc"
     },
     "keywords": [],
     "author": "",
