--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,5 @@ jobs:
           key: ${{ secrets.EC2_PRIVATE_KEY }}
           script: |
             echo "🚀 Starting deployment on EC2..."
-            bash /home/deploy/deploy.sh
+            sh /home/deploy/deploy.sh
             echo "✅ Deployment completed!"
