--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,9 +18,12 @@ jobs:
         uses: LuisEnMarroquin/setup-ssh-action@v2.0.0
         with:
           host: ${{ secrets.EC2_HOST }}
-          username: ${{ secrets.EC2_USERNAME }}
+          user: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_PRIVATE_KEY }}
+          port: 22
           script: |
             echo "🚀 Starting deployment on EC2..."
-            sh /home/deploy/deploy.sh
+            chmod +x /home/deploy/deploy.sh
+            /bin/bash /home/deploy/deploy.sh
             echo "✅ Deployment completed!"
+
