--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,18 +11,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout your repository
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # Setup SSH
+      # Step 2: Setup SSH agent with your private key
       - name: Setup SSH
-        uses: LuisEnMarroquin/setup-ssh-action@v2.0.0
+        uses: webfactory/ssh-agent@v0.8.1
         with:
-          SSHKEY: ${{ secrets.EC2_PRIVATE_KEY }}
-          USER: ${{ secrets.EC2_USERNAME }}
-          ORIGIN: ${{ secrets.EC2_HOST }}
+          ssh-private-key: ${{ secrets.EC2_PRIVATE_KEY }}
 
-      # Run deploy script
+      # Step 3: Run commands on EC2
       - name: Run deploy script on EC2
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} "
